--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,5 @@
 body{
     font-family: 'Montserrat', sans-serif !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
