--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1110,31 +1110,31 @@
                 </tr>              
                 <tr>
                   <td>Repair (A)</td>
-                    <td >
+                    <td align="right">
                       {{score.sco_costDenting}}
                     </td>
                 </tr>
                 <tr>
                     <td>Painting (B)</td>
-                    <td>{{score.sco_costPainting}}</td>
+                    <td align="right">{{score.sco_costPainting}}</td>
                       </tr>
                 <tr>
                     <td>Other (C)</td>
-                    <td>{{score.sco_costOther}}</td>
+                    <td align="right">{{score.sco_costOther}}</td>
                       </tr>
                 <tr>
                     <th>Total Labour (D=A+B+C)</th>
-                    <td ><b>
+                    <td align="right"><b>
                      {{score.sco_costLabor}}
                       </b></td>
                 </tr>
                 <tr >
                     <td>Parts (E)</td>
-                    <td>{{score.sco_costParts}}</td>
+                    <td align="right">{{score.sco_costParts}}</td>
                       </tr>
                 <tr>
                     <th>Total (D+E)</th>
-                    <td ><b>
+                    <td align="right"><b>
                       {{score.sco_assessCost}}
                       </b></td>
                 </tr>
