--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1089,6 +1089,8 @@
         <ng-template #estimation_content>
           <div class="box-sha">
             <table class="table table-bordered vertical_table">
+              <col width="200">
+              <col width="200">
               <tbody>
                 <tr>
                   <th> Damaged Part </th>
@@ -1103,6 +1105,8 @@
               </tbody>
             </table>
             <table class="table table-bordered vertical_table" *ngFor="let score of scores">
+              <col width="200">
+              <col width="200">
               <tbody *ngIf ="score.sco_scoreType === 'claim'">
                 <tr>       
                   <th> Costs </th>
