--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1088,7 +1088,9 @@
         </div>
         <ng-template #estimation_content>
           <div class="box-sha">
-            <table class="table table-bordered vertical_table">          
+            <table class="table table-bordered vertical_table">
+              <col style="width:70%">
+            	<col style="width:30%">
               <tbody>
                 <tr>
                   <th> Damaged Part </th>
